<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.ide.vscode</groupId>
	<artifactId>commons-parent</artifactId>
	<packaging>pom</packaging>
	<version>0.1.4-SNAPSHOT</version>
	<name>commons-parent</name>

	<modules>
		<module>commons-language-server</module>
		<module>language-server-test-harness</module>
		<module>commons-yaml</module>
		<module>commons-util</module>
		<module>commons-java</module>
		<module>java-properties</module>
		<module>commons-cf</module>
		<module>commons-maven</module>
		<module>commons-gradle</module>
		<module>commons-boot-app-cli</module>
		<module>commons-boot</module>
	</modules>

	<repositories>
		<repository>
			<id>lsp4j-snapshots-repo</id>
			<name>lsp4j-snapshots-repo</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/org/eclipse/lsp4j/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>

		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>http://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-releases</id>
			<name>Spring Releases</name>
			<url>http://repo.spring.io/release</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>http://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<name>Sonatype OSS Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<yaml-version>1.17</yaml-version>
		<junit-version>4.11</junit-version>
		<assertj-version>3.5.2</assertj-version>
		<slf4j-version>1.7.22</slf4j-version>
		<guava-version>19.0</guava-version>
		<mockito-version>1.10.19</mockito-version>
		<jackson-2-version>2.5.0</jackson-2-version>
		<jersey-2-version>2.10</jersey-2-version>
		<lsp4j-version>0.4.0-SNAPSHOT</lsp4j-version>
		<!-- NOTE: Reactor version must match version used by the CF client -->
		<reactor-version>3.0.5.RELEASE</reactor-version>
		<reactor-netty>0.6.0.RELEASE</reactor-netty>
		<cloudfoundry-client-version>2.4.0.RELEASE</cloudfoundry-client-version>
		<commons-io-version>2.4</commons-io-version>
	</properties>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j-version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit-version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>${assertj-version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>
